# Vivaldi-browser

./: .gn  BUILD.gn  DEPS  LICENSE  README  README.md  VIVALDI_PRODUCT  VIVALDI_VERSION  all.gyp  args.gn  get_vivaldi_version.gypi  signing.gn  vivaldi.gyp  vivaldi_chromium.gyp  vivaldi_common.gypi  vivaldi_disabled_targets.gypi  vivaldi_init_settings.gni  vivaldi_product.gypi  vivaldi_sources.gypi  vivaldi_sources_later.gypi  vivaldi_version.gypi  vivaldi_version_info.gypi
android/: BUILD.gn  source_updates.gni
app/: BUILD.gn  MacDmgDSStore  deps_updates.gni  deps_updates_all.gni  list_lang_xmb_files.py  resource_list.gni  source_updates.gni  source_updates_all.gni  vivaldi.exe.manifest  vivaldi.rc  vivaldi_apptools.cpp  vivaldi_apptools.h  vivaldi_chrome_grit_action.gypi  vivaldi_command_controller.cpp  vivaldi_command_controller.h  vivaldi_commands.h  vivaldi_constants.cc  vivaldi_constants.h  vivaldi_extract_not_translated.gypi  vivaldi_grit_action.gypi  vivaldi_icon.h  vivaldi_icon.h.in  vivaldi_local_profile.bat  vivaldi_normal_chrome_grit_action.gypi  vivaldi_normal_grit_action.gypi  vivaldi_other_grit_action.gypi  vivaldi_resources.gyp  vivaldi_resources.h  vivaldi_strings.grd.tmpl  vivaldi_version_constants.cc  vivaldi_version_constants.h  vivaldi_version_info.cc  vivaldi_version_info.h
app/android/: vivaldi_android_strings.grd
app/gritsettings/: resource_ids
app/installer/: vivaldi_installer_strings.grd
app/ios/: vivaldi_ios_native_strings.grd
app/mobile_common/: vivaldi_mobile_common_native_strings.grd
app/native_resources/: vivaldi_autoplay_strings.grdp  vivaldi_bookmark_strings.grdp  vivaldi_context_menu_strings.grdp  vivaldi_importer_strings.grdp  vivaldi_mac_menus.grdp  vivaldi_native_browser_strings.grdp  vivaldi_native_resources.grd  vivaldi_native_strings.grd  vivaldi_native_strings_ja.xtb  vivaldi_native_unscaled.grd  vivaldi_notes_strings.grdp  vivaldi_update_notifier_strings.grdp
app/nibs/: BUILD.gn  VivaldiMainMenu.xib
app/other_resources/: README  vivaldi.VisualElementsManifest.xml  vivaldi_dll.ver  vivaldi_elf.ver  vivaldi_exe.ver  vivaldi_watcher.ver
app/placeholders/: README
app/resources/: BUILD.gn  extract_translations.py  gen_write_pak_script.py  gen_write_translations_script.py  generate_untranslated.gni  merge_idfile.py  merge_resources.py  (+9 more)
base/: BUILD.gn  deps_updates.gni  edge_version.h.in  source_updates.gni  source_updates_all.gni  vivaldi_paths.cc  vivaldi_paths.h  vivaldi_running.cpp  vivaldi_switches.cpp  vivaldi_switches.h  vivaldi_user_agent.cc  vivaldi_user_agent.h  vivaldi_user_agent_white_list.inc
browser/: BUILD.gn  deps_updates.gni  init_sparkle.cc  init_sparkle.h  keycode_translation.cpp  keycode_translation.h  keycode_translation_linux.cc  keycode_translation_win.cc  launch_update_notifier.h  launch_update_notifier_posix.cc  launch_update_notifier_win.cc  removed_partners_tracker.cc  removed_partners_tracker.h  source_updates.gni  startup_vivaldi_browser.cpp  startup_vivaldi_browser.h  stats_reporter.cc  stats_reporter.h  stats_reporter_impl.cc  stats_reporter_impl.h  stats_reporter_impl_android.cc  stats_reporter_impl_content.cc  stats_reporter_impl_ios.mm  stats_reporter_impl_linux.cc  stats_reporter_impl_mac.mm  stats_reporter_impl_win.cc  stats_reporter_unittest.cc  vivaldi_app_observer.h  vivaldi_app_observer.mm  vivaldi_browser_finder.cc  vivaldi_browser_finder.h  vivaldi_child_process_flags.cc  vivaldi_child_process_flags.h  vivaldi_clipboard_utils.cc  vivaldi_clipboard_utils.h  vivaldi_default_bookmarks.cc  vivaldi_default_bookmarks.h  vivaldi_default_bookmarks_reader.cc  vivaldi_default_bookmarks_reader.h  vivaldi_default_bookmarks_updater_client_impl.cc  (+18 more)
calendar/: BUILD.gn  account_table.cc  account_table.h  account_type.cc  account_type.h  calendar_backend.cc  calendar_backend.h  calendar_backend_notifier.h  calendar_constants.cc  calendar_constants.h  calendar_database.cc  calendar_database.h  calendar_database_params.cc  calendar_database_params.h  calendar_model_loaded_observer.cc  calendar_model_loaded_observer.h  calendar_model_observer.h  calendar_service.cc  calendar_service.h  calendar_service_factory.cc  calendar_service_factory.h  calendar_table.cc  calendar_table.h  calendar_type.cc  calendar_type.h  calendar_typedefs.h  calendar_types.cc  calendar_types.h  calendar_util.cc  calendar_util.h  deps_updates.gni  event_database.cc  event_database.h  event_exception_type.cc  event_exception_type.h  event_template_table.cc  event_template_table.h  event_template_type.cc  event_template_type.h  event_type.cc  (+19 more)
clientparts/: BUILD.gn  deps_updates.gni  vivaldi_content_browser_client_parts.cc  vivaldi_content_browser_client_parts.h
components/: BUILD.gn  deps_updates.gni  source_update_all.gni  source_updates.gni
contact/: BUILD.gn  contact_backend.cc  contact_backend.h  contact_backend_notifier.h  contact_constants.cc  contact_constants.h  contact_database.cc  contact_database.h  contact_database_params.cc  contact_database_params.h  contact_model_loaded_observer.cc  contact_model_loaded_observer.h  contact_model_observer.h  contact_service.cc  contact_service.h  contact_service_factory.cc  contact_service_factory.h  contact_table.cc  contact_table.h  contact_type.cc  contact_type.h  contact_typedefs.h  deps_updates.gni  email_table.cc  email_table.h  email_type.cc  email_type.h  phonenumber_table.cc  phonenumber_table.h  phonenumber_type.cc  phonenumber_type.h  postaladdress_table.cc  postaladdress_table.h  postaladdress_type.cc  postaladdress_type.h
extensions/: BUILD.gn  deps_updates.gni  source_updates.gni  vivaldi_api_resources.gyp  vivaldi_associated_tabs.cc  vivaldi_associated_tabs.h  vivaldi_extension_prefs.cc  vivaldi_extension_resources.grd  vivaldi_extensions_client.cpp  vivaldi_extensions_client.h  vivaldi_extensions_guest_view.cc  vivaldi_extensions_init.cpp  vivaldi_extensions_init.h  vivaldi_initialize_extensions_client.cc  vivaldi_script_dispatcher.cpp  vivaldi_script_dispatcher.h  vivaldi_standard_management_policy_provider.cc  vivaldi_standard_management_policy_provider.h
(+38521 files in other folders)
